--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,13 +3,12 @@
     <style name="Theme.Tracker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/amber_700</item>
-        <item name="colorPrimaryVariant">@color/amber_800</item>  //StatusBar color
+        <item name="colorPrimaryVariant">@color/amber_800</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorAccent">?attr/colorSecondary</item>
         <item name="colorError">@color/error</item>
-        <item name="colorOnBackground">@color/blue_gray_700</item> // Bottom navigation background
+        <item name="colorOnBackground">@color/blue_gray_700</item>
         <item name="colorOnSurface">@color/black</item>
-
 
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/blue_gray_900</item>
@@ -19,7 +18,6 @@
 
         <!-- Customize. -->
         <item name="android:navigationBarColor">?attr/colorSecondary</item>
-<!--        <item name="alertDialogTheme">@style/AlertDialogTheme</item>-->
         <item name="bottomNavigationStyle">@style/BottomNavigationTheme</item>
         <item name="android:windowBackground">@color/blue_gray_50</item>
 
